--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
   ci = commit
   co = checkout
   st = status
+  rb = rebase origin/master
   # Display tree-like log, because default log is a pain…
   lg = log --graph --date=relative --pretty=tformat:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%an %ad)%Creset'
   # Useful when you have to update your last commit
