--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
+set-option -g mouse on
 # # set -g default-terminal "${TERM}"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
