--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,10 @@
-# set-option -g default-terminal 'screen-254color'
-# set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g default-terminal 'screen-254color'
+set-option -g terminal-overrides ',xterm-256color:RGB'
 
 # set -g prefix ^A
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
+set -g display-time 4000      
 set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
