--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,45 +7,39 @@ set -g renumber-windows on       # renumber all windows when any window is close
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 set-option -g mouse on
-# # set -g default-terminal "${TERM}"
+set -g default-terminal "tmux-256color"
+# set -g default-terminal "${TERM}"
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 # theme
-set -g @catppuccin_flavour 'frappe'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_flavor 'frappe'
+set -g @catppuccin_window_status_style "rounded"
+# leave this unset to let applications set the window title
+set -g @catppuccin_window_default_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_status "icon"
+set -g @catppuccin_window_current_background "#{@thm_mauve}"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory session cpu battery"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g status-left ""
+set -g status-right-length '250'
+set -g status-right "#{E:@catppuccin_status_user}"
+set -ag status-right "#{E:@catppuccin_status_directory}"
 
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g @plugin 'catppuccin/tmux#v1.0.1'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
